# argus-campaign-intelligence

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  demo_queries.txt  docker-compose.yaml  my_test.txt  pyproject.toml  settings-develop.yaml  settings-test.yaml  settings.yaml
.claude/: settings.local.json
argus/: __main__.py  di.py  launcher.py  main.py  paths.py
argus/components/cache/: __init__.py  semantic_cache.py
argus/components/embedding/: embedding_component.py
argus/components/graph_store/: graph_queries.py  graph_schema.py  graph_store_component.py
argus/components/guardrails/: guardrail_component.py
argus/components/ingest/: __init__.py  entity_extractor.py  ingest_component.py  ingest_helper.py  ingest_worker.py  table_chunker.py
argus/components/llm/: llm_component.py
argus/components/prompt_manager/: prompt_manager.py
argus/components/vector_store/: vector_store_component.py
argus/server/auth/: auth_router.py
argus/server/chat/: chat_orchestrator.py  chat_router.py  rag_graph.py
argus/server/collections/: collections_router.py
argus/server/ingest/: __init__.py  ingest_router.py  ingest_service.py
argus/server/utils/: auth.py
argus/settings/: settings.py  settings_loader.py
argus/utils/: skills.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  chat.ts  client.ts  collections.ts  ingest.ts  types.ts
scripts/: README.md  download_kaggle.py  ingest_seeds.py  seed_data.py
scripts/generators/: ad_copy_library.py  audience_segments.py  base.py  budget_allocation.py  campaign_performance.py  monthly_report.py  strategy_brief.py
scripts/models/: client_context.py
scripts/prompts/: monthly_report.txt  strategy_brief.txt
scripts/templates/: monthly_report.j2  strategy_brief.j2
tests/integration/: test_chat_route.py  test_ingest_route.py
tests/unit/: test_auth.py  test_ingest_helper.py  test_llm_component.py  test_semantic_cache.py  test_settings.py  test_skills.py
(+35 files in other folders)
